--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -18,6 +20,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: 'Poppins', sans-serif;
   background: linear-gradient(
       to bottom,
       transparent,
